# Astra

./: .build.yml  .clang-format  .editorconfig  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FLATPAK.md  README.md  REUSE.toml  TODO.md  com.redstrate.astra.desktop  test-steamdeck.sh  zone.xiv.astra.appdata.xml  zone.xiv.astra.desktop  zone.xiv.astra.yml
.github/workflows/: arch.yml  main.yml  xivlauncher-arch.yml
.reuse/: dep5
autotests/: CMakeLists.txt  accountmanagertest.cpp  crtrandtest.cpp  encryptedargtest.cpp  patchlisttest.cpp  processwatchertest.cpp  profilemanagertest.cpp  utilitytest.cpp
compatibilitytool/: compatibilitytool.vdf  toolmanifest.vdf
docs/: releasing.md  updating-flatpak.md
flatpak/: kf6.json  kirigami-addons.json
include/: aboutwindow.h  assetupdater.h  bannerwidget.h  blowfish.h  config.h  dxvkinstaller.h  encryptedarg.h  fiinparser.h  gameinstaller.h  headline.h  indexparser.h  launchercore.h  launcherwindow.h  settingswindow.h  squareboot.h  squarelauncher.h
launcher/: CMakeLists.txt  accountconfig.kcfg  accountconfig.kcfgc  config.kcfg  config.kcfgc  main.cpp  profileconfig.kcfg  profileconfig.kcfgc  resources.qrc
launcher/cli/: CMakeLists.txt
launcher/cli/include/: cmdinterface.h
launcher/cli/src/: cmdinterface.cpp
launcher/core/: CMakeLists.txt
launcher/core/include/: assetupdater.h  encryptedarg.h  gameinstaller.h  gameparser.h  headline.h  launchercore.h  patcher.h  sapphirelauncher.h  squareboot.h  squarelauncher.h  steamapi.h  watchdog.h
launcher/core/src/: assetupdater.cpp  blowfish.cpp  dxvkinstaller.cpp  encryptedarg.cpp  gameinstaller.cpp  gameparser.cpp  headline.cpp  launchercore.cpp  patcher.cpp  sapphirelauncher.cpp  squareboot.cpp  squarelauncher.cpp  steamapi.cpp  watchdog.cpp
launcher/desktop/: CMakeLists.txt
launcher/desktop/include/: aboutwindow.h  assetupdater.h  autologinwindow.h  bannerwidget.h  desktopinterface.h  gamescopesettingswindow.h  launcherwindow.h  settingswindow.h  virtualdialog.h  virtualwindow.h
launcher/desktop/src/: aboutwindow.cpp  assetupdater.cpp  autologinwindow.cpp  bannerwidget.cpp  desktopinterface.cpp  gamescopesettingswindow.cpp  launcherwindow.cpp  settingswindow.cpp  virtualdialog.cpp  virtualwindow.cpp
launcher/include/: account.h  accountmanager.h  assetupdater.h  benchmarkinstaller.h  charactersync.h  compatibilitytoolinstaller.h  crtrand.h  encryptedarg.h  existinginstallmodel.h  gameinstaller.h  gameparser.h  gamerunner.h  headline.h  launchercore.h  launchersettings.h  logger.h  patcher.h  patchlist.h  processlogger.h  processwatcher.h  profile.h  profilemanager.h  sapphirelauncher.h  sapphirelogin.h  squareboot.h  squareenixlogin.h  squarelauncher.h  steamapi.h  syncmanager.h  utility.h  watchdog.h
launcher/src/: account.cpp  accountmanager.cpp  assetupdater.cpp  benchmarkinstaller.cpp  charactersync.cpp  compatibilitytoolinstaller.cpp  crtrand.cpp  encryptedarg.cpp  existinginstallmodel.cpp  gameinstaller.cpp  gameparser.cpp  gamerunner.cpp  headline.cpp  launchercore.cpp  launchersettings.cpp  logger.cpp  main.cpp  patcher.cpp  patchlist.cpp  processlogger.cpp  processwatcher.cpp  profile.cpp  profilemanager.cpp  sapphirelauncher.cpp  sapphirelogin.cpp  squareboot.cpp  squareenixlogin.cpp  squarelauncher.cpp  steamapi.cpp  syncmanager.cpp  utility.cpp  watchdog.cpp
launcher/tablet/: CMakeLists.txt
launcher/tablet/include/: tabletinterface.h
launcher/tablet/qml/: main.qml
launcher/tablet/src/: tabletinterface.cpp
launcher/ui/: Main.qml  main.qml
launcher/ui/Components/: FormFileDelegate.qml  FormFolderDelegate.qml
launcher/ui/Pages/: AutoLoginPage.qml  BrowserPage.qml  LoginPage.qml  MainPage.qml  NewsPage.qml  StatusPage.qml
launcher/ui/Settings/: AboutPage.qml  AccountSettings.qml  AccountsPage.qml  CompatibilityToolSetup.qml  DeveloperSettings.qml  GeneralSettings.qml  ProfileSettings.qml  ProfilesPage.qml  SettingsPage.qml  SyncSettings.qml
launcher/ui/Setup/: AccountSetup.qml  AddSapphire.qml  AddSquareEnix.qml  BenchmarkInstallProgress.qml  DownloadSetup.qml  ExistingSetup.qml  InstallBenchmark.qml  InstallGame.qml  InstallProgress.qml  SetupPage.qml  UseExistingInstall.qml
scripts/: build-flatpak-for-repo.sh  build-flatpak.sh  config.toml  tarball.sh  windows-setup.ps1
src/: aboutwindow.cpp  assetupdater.cpp  assetupdater.h  blowfish.cpp  blowfish.h  desktopinterface.cpp  dxvkinstaller.cpp  encryptedarg.cpp  fiinparser.cpp  gameinstaller.cpp  gameparser.h  gamescopesettingswindow.cpp  gamescopesettingswindow.h  headline.cpp  indexparser.cpp  launchercore.cpp  launchercore.h  launcherwindow.cpp  launcherwindow.h  main.cpp  sapphirelauncher.cpp  sapphirelauncher.h  settingswindow.cpp  settingswindow.h  squareboot.cpp  squareboot.h  squarelauncher.cpp  squarelauncher.h  tabletinterface.cpp  watchdog.cpp  watchdog.h  xivlauncher.cpp  xivlauncher.h
